# trabalho1-forca-TwoDotS2

./: .gitignore  CMakeLists.txt  README.md  author.md  forca  forca.sh
.ccls-cache/@@home@runner@LP1-Forca/: @nix@store@4m98bsvjh538p292pr4604313mjmnpc5-clang-12.0.1-lib@lib@clang@12.0.1@include@__stddef_max_align_t.h.blob  @nix@store@4m98bsvjh538p292pr4604313mjmnpc5-clang-12.0.1-lib@lib@clang@12.0.1@include@stdarg.h.blob  @nix@store@4m98bsvjh538p292pr4604313mjmnpc5-clang-12.0.1-lib@lib@clang@12.0.1@include@stddef.h.blob  @nix@store@4m98bsvjh538p292pr4604313mjmnpc5-clang-12.0.1-lib@lib@clang@12.0.1@include@stdint.h.blob  @nix@store@dlni53myj53kx20pi4yhm7p68lw17b07-gcc-10.3.0@include@c++@10.3.0@backward@binders.h.blob  @nix@store@dlni53myj53kx20pi4yhm7p68lw17b07-gcc-10.3.0@include@c++@10.3.0@bits@alloc_traits.h.blob  @nix@store@dlni53myj53kx20pi4yhm7p68lw17b07-gcc-10.3.0@include@c++@10.3.0@bits@allocator.h.blob  @nix@store@dlni53myj53kx20pi4yhm7p68lw17b07-gcc-10.3.0@include@c++@10.3.0@bits@basic_ios.h.blob  @nix@store@dlni53myj53kx20pi4yhm7p68lw17b07-gcc-10.3.0@include@c++@10.3.0@bits@basic_ios.tcc.blob  @nix@store@dlni53myj53kx20pi4yhm7p68lw17b07-gcc-10.3.0@include@c++@10.3.0@bits@move.h.blob  (+166 more)
include/: Forca.hpp  ForcaMenus.hpp
resources/: scores.txt  testePalavras-caractereInvalido.txt  testePalavras-espaco.txt  testePalavras-frequenciaInvalida.txt  testePalavras-palavraInvalida.txt  testeScores-dificuldadeVazio.txt  testeScores-erroScores.txt  testeScores-nomeVazio.txt  testeScores-pontuacaoVazio.txt  words_2000.txt
src/: Forca.cpp  ForcaMenus.cpp  forca  main.cpp
(+215 files in other folders)
